--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi I'm 21 years old and I am an asipiring software developer. Currently I am a beginner in coding.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Imperial, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I watch a lot of anime, play my switch, and I collect sneakers.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to work behind a big well known company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Currently still living in my hometown, Imperial, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer so I can be a part of the evolving future of technology.</p>
     </section>
 
     <footer id="footer">
